--- a/index.html
+++ b/index.html
@@ -160,6 +160,46 @@
 </div>
 </div>
 </section>
+<section class="bg-gray-500">
+<section class="mb-12 text-center">
+  <h2 class="text-2xl font-semibold mb-4">About Us</h2>
+  <p class="text-lg">Welcome to <strong>General Industry</strong>, where entertainment meets innovation. Established in <strong>2024</strong>, our mission is to create and deliver captivating content that resonates with audiences worldwide. Our diverse portfolio spans film, television, music, live events, and digital media, reflecting our commitment to storytelling excellence and technological advancement.</p>
+  </section>
+  <section class="mb-12 text-center">
+  <h2 class="text-2xl font-semibold mb-4">Our Vision</h2>
+  <p class="text-lg">To inspire and connect people through the power of entertainment, breaking new ground in creativity and audience engagement.</p>
+  </section>
+  <section class="mb-12 text-center">
+  <h2 class="text-2xl font-semibold mb-4">Our Mission</h2>
+  <p class="text-lg">To produce high-quality, engaging, and culturally relevant content that entertains, educates, and inspires, while pushing the boundaries of innovation in the entertainment industry.</p>
+  </section>
+  <section class="mb-12">
+  <h2 class="text-2xl font-semibold mb-4 text-center">What We Do</h2>
+  <ul class="list-disc list-inside text-lg">
+  <li><strong>Film & Television:</strong> From blockbuster movies to critically acclaimed TV series, our productions set new standards in storytelling and production quality.</li>
+  <li><strong>Music:</strong> We represent a wide range of artists and genres, producing music that strikes a chord with fans around the globe.</li>
+  <li><strong>Live Events:</strong> Our live events and concerts provide unforgettable experiences, bringing fans closer to the artists they love.</li>
+  <li><strong>Digital Media:</strong> Embracing the future of entertainment, we create immersive digital experiences, including web series, podcasts, and interactive content.</li>
+  </ul>
+  </section>
+  <section class="mb-12">
+  <h2 class="text-2xl font-semibold mb-4 text-center">Our Values</h2>
+  <ul class="list-disc list-inside text-lg">
+  <li><strong>Creativity:</strong> We champion originality and encourage innovative thinking in every project we undertake.</li>
+  <li><strong>Integrity:</strong> We operate with honesty and transparency, building trust with our audiences and partners.</li>
+  <li><strong>Inclusivity:</strong> We celebrate diversity and strive to create content that reflects the richness of the global community.</li>
+  <li><strong>Excellence:</strong> We are committed to delivering superior quality in everything we do, from concept to execution.</li>
+  </ul>
+  </section>
+  <section class="mb-12 text-center">
+  <h2 class="text-2xl font-semibold mb-4">Our Team</h2>
+  <p class="text-lg">Our team consists of industry veterans and fresh talent, bringing together a wealth of experience and a passion for storytelling. Our collaborative culture fosters creativity and drives our collective success.</p>
+  </section>
+  <section class="mb-12 text-center">
+  <h2 class="text-2xl font-semibold mb-4">Join Us</h2>
+  <p class="text-lg">Whether you're an aspiring artist, a seasoned professional, or a passionate fan, <strong>General Industry</strong> invites you to join us on our journey. Together, we can shape the future of entertainment.</p>
+  </section>
+
 
 <section>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123347.47355527528!2d120.39815594829429!3d14.958886776137383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396611e6ff3e5cb%3A0x2ee84d32d4279035!2sFloridablanca%2C%20Pampanga!5e0!3m2!1sen!2sph!4v1717392652895!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
