Update index.html v4

--- a/index.html
+++ b/index.html
@@ -205,6 +205,44 @@
   <h2 class="text-2xl font-semibold mb-4">Join Us</h2>
   <p class="text-lg">Whether you're an aspiring artist, a seasoned professional, or a passionate fan, <strong>General Industry</strong> invites you to join us on our journey. Together, we can shape the future of entertainment.</p>
   </section>
+  <section class="bg-gray-200">
+    <section class="mb- text-center">
+    <h2 class="text-2xl font-semibold mb-4">Our Services</h2>
+    <p class="text-lg mb-6">At <strong>General Industry</strong>, we offer a wide range of services to meet the diverse needs of our clients in the entertainment industry. Our commitment to excellence ensures that each service is delivered with the highest quality and professionalism.</p>
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+    <!-- Film & Television -->
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+    <h3 class="text-xl font-bold mb-2">Film & Television</h3>
+    <p class="text-lg">We produce captivating films and TV shows that entertain and inspire audiences around the world. Our team handles everything from concept development to post-production.</p>
+    </div>
+    <!-- Music Production -->
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+    <h3 class="text-xl font-bold mb-2">Music Production</h3>
+    <p class="text-lg">Our music production services cover recording, mixing, and mastering. We work with talented artists to create hit songs and memorable soundtracks.</p>
+    </div>
+    <!-- Live Events -->
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+    <h3 class="text-xl font-bold mb-2">Live Events</h3>
+    <p class="text-lg">We organize and manage live events, including concerts, festivals, and corporate events, providing unforgettable experiences for attendees.</p>
+    </div>
+    <!-- Digital Media -->
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+    <h3 class="text-xl font-bold mb-2">Digital Media</h3>
+    <p class="text-lg">Our digital media services include web series, podcasts, and interactive content, designed to engage and entertain audiences across digital platforms.</p>
+    </div>
+    <!-- Talent Management -->
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+    <h3 class="text-xl font-bold mb-2">Talent Management</h3>
+    <p class="text-lg">We represent a diverse roster of talent, providing career management, branding, and promotional services to help artists achieve their full potential.</p>
+    </div>
+    <!-- Content Distribution -->
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+    <h3 class="text-xl font-bold mb-2">Content Distribution</h3>
+    <p class="text-lg">Our content distribution network ensures that your media reaches a global audience through various channels, including streaming services and traditional media.</p>
+    </div>
+    </div>
+    </section>
+  </section>
 
 
 <section>
