--- a/index.html
+++ b/index.html
@@ -223,8 +223,38 @@
     </div>
     </section>
   </section>
-
-
+  <section class="bg-gray-950">
+  <section class="mb-12 text-center">
+    <h2 class="text-2xl font-semibold mb-4">Get in Touch</h2>
+    <p class="text-lg mb-6">We'd love to hear from you! Whether you have a question about our services, need assistance, or just want to share your feedback, we're here to help. Please fill out the form below or use the contact information provided to reach us.</p>
+    <div class="bg-white p-6 rounded-lg shadow-lg">
+    <form action="#" method="POST">
+    <div class="mb-4">
+    <label class="block text-lg font-medium mb-2" for="name">Name</label>
+    <input class="w-full p-3 border border-gray-300 rounded-lg" type="text" id="name" name="name" required>
+    </div>
+    <div class="mb-4">
+    <label class="block text-lg font-medium mb-2" for="email">Email</label>
+    <input class="w-full p-3 border border-gray-300 rounded-lg" type="email" id="email" name="email" required>
+    </div>
+    <div class="mb-4">
+    <label class="block text-lg font-medium mb-2" for="subject">Subject</label>
+    <input class="w-full p-3 border border-gray-300 rounded-lg" type="text" id="subject" name="subject" required>
+    </div>
+    <div class="mb-4">
+    <label class="block text-lg font-medium mb-2" for="message">Message</label>
+    <textarea class="w-full p-3 border border-gray-300 rounded-lg" id="message" name="message" rows="6" required></textarea>
+    </div>
+    <button class="bg-blue-600 text-white p-3 rounded-lg hover:bg-blue-700" type="submit">Send Message</button>
+    </form>
+    </div>
+    </section>
+    <section class="mb-12 text-center">
+    <h2 class="text-2xl font-semibold mb-4">Contact Information</h2>
+    <p class="text-lg mb-2"><strong>Email:</strong> <a href="" class="text-black">lingatnicole84@gmail.com</a></p>
+    <p class="text-lg mb-2"><strong>Phone:</strong> <a href="" class="text-black">09500685585</a></p>
+    <p class="text-lg mb-2"><strong>Address:</strong> Purok 2, Solib Floridablanca Pampanga</p>
+    </section>
 <section>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d123347.47355527528!2d120.39815594829429!3d14.958886776137383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3396611e6ff3e5cb%3A0x2ee84d32d4279035!2sFloridablanca%2C%20Pampanga!5e0!3m2!1sen!2sph!4v1717392652895!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
