Update index.html v6

--- a/index.html
+++ b/index.html
@@ -36,24 +36,25 @@
           <div class="hidden w-full md:block md:w-auto" id="navbar-default">
               <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
                   <li>
-                      <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+                      <a href="#Home" class="nav-link active block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
                   </li>
                   <li>
-                      <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+                      <a href="#About" class="nav-link block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
                   </li>
                   <li>
-                      <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+                      <a href="#Services" class="nav-link block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
                   </li>
                   <li>
-                      <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Download</a>
+                      <a href="#" class="nav-link block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Download</a>
                   </li>
                   <li>
-                      <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+                      <a href="#Contact" class="nav-link block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
                   </li>
               </ul>
           </div>
       </div>
   </nav>
+<section id=Home>
   <div id="default-carousel" class="relative w-full" data-carousel="slide">
     <!-- Carousel wrapper -->
     <div class="relative h-56 overflow-hidden rounded-lg md:h-96">
@@ -160,7 +161,8 @@
 </div>
 </div>
 </section>
-<section class="bg-gray-300">
+</section>
+<section id=About class="bg-gray-300">
 <section class="mb-12 text-center">
   <h2 class="text-2xl font-semibold mb-4">About Us</h2>
   <p class="text-lg">Welcome to <strong>General Industry</strong>, where entertainment meets innovation. Established in <strong>2024</strong>, our mission is to create and deliver captivating content that resonates with audiences worldwide. Our diverse portfolio spans film, television, music, live events, and digital media, reflecting our commitment to storytelling excellence and technological advancement.</p>
@@ -185,7 +187,7 @@
   <h2 class="text-2xl font-semibold mb-4">Join Us</h2>
   <p class="text-lg">Whether you're an aspiring artist, a seasoned professional, or a passionate fan, <strong>General Industry</strong> invites you to join us on our journey. Together, we can shape the future of entertainment.</p>
   </section>
-  <section class="bg-gray-200">
+  <section id=Services class="bg-gray-200">
     <section class="mb- text-center">
     <h2 class="text-2xl font-semibold mb-4">Our Services</h2>
     <p class="text-lg mb-6">At <strong>General Industry</strong>, we offer a wide range of services to meet the diverse needs of our clients in the entertainment industry. Our commitment to excellence ensures that each service is delivered with the highest quality and professionalism.</p>
@@ -223,7 +225,7 @@
     </div>
     </section>
   </section>
-  <section class="bg-gray-950">
+  <section id=Contact class="bg-gray-950">
   <section class="mb-12 text-center">
     <h2 class="text-2xl font-semibold mb-4">Get in Touch</h2>
     <p class="text-lg mb-6">We'd love to hear from you! Whether you have a question about our services, need assistance, or just want to share your feedback, we're here to help. Please fill out the form below or use the contact information provided to reach us.</p>
