--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>Appdev-fl2</title>
   </head>
   <body>
-    <nav class="bg-gray-700 border-gray-200 dark:bg-gray-900">
+    <nav class="fixed top-0 left-0 right-0 bg-gray-700 border-gray-200 dark:bg-gray-900">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
           <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
               <img src="./images/gi-logo.png" class="h-8" alt="Flowbite Logo" />
